--- a/cloud-gateway/src/main/resources/application.yml
+++ b/cloud-gateway/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
             - name: CircuitBreaker
               args:
                 name: DEPARTMENT-SERVICE
-                fallbackuri: forward:/department ServiceFallBack
+                fallbackuri: forward:/departmentServiceFallBack
 
 
 eureka:
