--- a/assignment-service/src/main/resources/bootstrap.yml
+++ b/assignment-service/src/main/resources/bootstrap.yml
@@ -1,6 +1,7 @@
 spring:
+  application:
+    name: ASSIGNMENT-SERVICE
   cloud:
     config:
-      discovery:
-        enabled: true
-        uri: http://localhost:9296
+      uri: http://localhost:9296
+      enabled: true
