cloud-gateway with hystrix

--- a/cloud-gateway/pom.xml
+++ b/cloud-gateway/pom.xml
@@ -35,8 +35,10 @@
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+            <artifactId>spring-cloud-starter-hystrix</artifactId>
+            <version>1.4.7.RELEASE</version>
         </dependency>
+
 
 
     </dependencies>
