--- a/cloud-gateway/src/main/resources/bootstrap.yml
+++ b/cloud-gateway/src/main/resources/bootstrap.yml
@@ -1,6 +1,7 @@
 spring:
+  application:
+    name: API-GATEWAY
   cloud:
     config:
-      discovery:
-        enabled: true
-        uri: http://localhost:9296
+      uri: http://localhost:9296
+      enabled: true
