--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,14 @@
     <properties>
         <java.version>17</java.version>
     </properties>
+    <modules>
+        <module>cloud-config-server</module>
+        <module>department-user-manager</module>
+        <module>cloud-gateway</module>
+        <module>user-service</module>
+        <module>assignment-service</module>
+        <module>department-service</module>
+    </modules>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
