--- a/monitoring/pom.xml
+++ b/monitoring/pom.xml
@@ -9,29 +9,22 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>at.spengergasse</groupId>
-    <artifactId>hussein-java-microservices</artifactId>
+    <artifactId>monitoring</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>hussein-java-microservices</name>
-    <description>hussein-java-microservices</description>
-    <packaging>pom</packaging>
+    <name>monitoring</name>
+    <description>monitoring</description>
     <properties>
         <java.version>17</java.version>
     </properties>
-
-    <modules>
-        <module>cloud-config-server</module>
-        <module>department-user-manager</module>
-        <module>cloud-gateway</module>
-        <module>user-service</module>
-        <module>assignment-service</module>
-        <module>department-service</module>
-        <module>monitoring</module>
-    </modules>
-
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <dependency>
