--- a/monitoring/src/main/resources/application.properties
+++ b/monitoring/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8888
 
-anagement.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
