changes on pom file

--- a/monitoring/pom.xml
+++ b/monitoring/pom.xml
@@ -14,6 +14,8 @@
     <name>monitoring</name>
     <description>monitoring</description>
     <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <java.version>17</java.version>
     </properties>
     <dependencies>
