--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -14,6 +14,8 @@
     <name>user-service</name>
     <description>user-service</description>
     <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <java.version>17</java.version>
         <spring-cloud.version>2021.0.0</spring-cloud.version>
     </properties>
