--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <description>hussein-java-microservices</description>
     <packaging>pom</packaging>
     <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <java.version>17</java.version>
     </properties>
 
